Adding text changes

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             Payroll management for Web3
                         </h1>
                         <p class="ud-mx-auto ud-mb-4 ud-max-w-[620px] ud-text-lg ud-font-medium ud-text-body-color-2 dark:ud-text-white">
-                            Get paid in crypto. That is the only way for mass adoption of Web3.
+                            Get paid in crypto. That is the only way for mass adoption of Web3. A Crypto bank that you can trust.
                         </p>
 
                         <div class="ud--mx-1 ud-mb-10 ud-flex ud-flex-wrap ud-items-center ud-justify-center sm:ud--mx-2">
@@ -484,7 +484,7 @@
                             </h3>
 
                             <p class="ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color sm:ud-text-lg lg:ud-text-base xl:ud-text-lg">
-                                Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor labore labore labore et dolor .
+                                Paytree ensures compliance & security standards of a Bank. A Crypto bank that you can trust.
                             </p>
                         </div>
                     </div>
@@ -502,11 +502,11 @@
 
                         <div>
                             <h3 class="ud-mb-3 ud-text-xl ud-font-bold ud-text-black dark:ud-text-white sm:ud-text-3xl lg:ud-text-xl xl:ud-text-3xl">
-                                Early Bonus
+                                0% fees
                             </h3>
 
                             <p class="ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color sm:ud-text-lg lg:ud-text-base xl:ud-text-lg">
-                                Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor labore labore labore et dolor .
+                                Buy and Sell crypto at Zero percentage fees from your account.
                             </p>
                         </div>
                     </div>
@@ -529,11 +529,11 @@
 
                         <div>
                             <h3 class="ud-mb-3 ud-text-xl ud-font-bold ud-text-black dark:ud-text-white sm:ud-text-3xl lg:ud-text-xl xl:ud-text-3xl">
-                                Universal Access
+                                Get paid in crypto
                             </h3>
 
                             <p class="ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color sm:ud-text-lg lg:ud-text-base xl:ud-text-lg">
-                                Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor labore labore labore et dolor .
+                                Receive your paycheck in Crypto in BTC, ETH, MATIC
                             </p>
                         </div>
                     </div>
@@ -551,11 +551,11 @@
 
                         <div>
                             <h3 class="ud-mb-3 ud-text-xl ud-font-bold ud-text-black dark:ud-text-white sm:ud-text-3xl lg:ud-text-xl xl:ud-text-3xl">
-                                Secure Storage
+                                Payroll integration (upcoming)
                             </h3>
 
                             <p class="ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color sm:ud-text-lg lg:ud-text-base xl:ud-text-lg">
-                                Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor labore labore labore et dolor .
+                                Work seamlessly with existing Payroll systems
                             </p>
                         </div>
                     </div>
@@ -573,11 +573,11 @@
 
                         <div>
                             <h3 class="ud-mb-3 ud-text-xl ud-font-bold ud-text-black dark:ud-text-white sm:ud-text-3xl lg:ud-text-xl xl:ud-text-3xl">
-                                Low Cost
+                                Free ATM access (upcoming)
                             </h3>
 
                             <p class="ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color sm:ud-text-lg lg:ud-text-base xl:ud-text-lg">
-                                Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor labore labore labore et dolor .
+                                Free ATM access is available across all the popular locations.
                             </p>
                         </div>
                     </div>
@@ -595,11 +595,11 @@
 
                         <div>
                             <h3 class="ud-mb-3 ud-text-xl ud-font-bold ud-text-black dark:ud-text-white sm:ud-text-3xl lg:ud-text-xl xl:ud-text-3xl">
-                                Several Profit
+                                Bank transfers (upcoming)
                             </h3>
 
                             <p class="ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color sm:ud-text-lg lg:ud-text-base xl:ud-text-lg">
-                                Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor labore labore labore et dolor .
+                                Bank transfers, Direct deposit, Bill payment
                             </p>
                         </div>
                     </div>
