Adding text changes

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                     <span>Bitcoin (BTC)</span>
                                 </div>
                             </div>
-                            <div class="ud-group ud-relative ud-mt-4 ud-px-1 sm:ud-px-2">
+                            <!-- <div class="ud-group ud-relative ud-mt-4 ud-px-1 sm:ud-px-2">
                                 <span class="ud-mt-2 ud-flex ud-h-10 ud-w-10 ud-items-center ud-justify-center ud-rounded-full ud-bg-white">
                     <svg
                       width="29"
@@ -240,7 +240,7 @@
                                     <span class="ud-absolute ud--bottom-1 ud-left-1/2 ud-h-3 ud-w-3 ud--translate-x-1/2 ud-rotate-45 ud-bg-[#2D2C4A]"></span>
                                     <span>Bitcoin (BTC)</span>
                                 </div>
-                            </div>
+                            </div> 
                             <div class="ud-group ud-relative ud-mt-4 ud-px-1 sm:ud-px-2">
                                 <span class="ud-mt-2 ud-flex ud-h-10 ud-w-10 ud-items-center ud-justify-center ud-rounded-full ud-bg-white">
                     <svg
@@ -273,7 +273,7 @@
                                     <span class="ud-absolute ud--bottom-1 ud-left-1/2 ud-h-3 ud-w-3 ud--translate-x-1/2 ud-rotate-45 ud-bg-[#2D2C4A]"></span>
                                     <span>Bitcoin (BTC)</span>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="ud-group ud-relative ud-mt-4 ud-px-1 sm:ud-px-2">
                                 <span class="ud-mt-2 ud-flex ud-h-10 ud-w-10 ud-items-center ud-justify-center ud-rounded-full ud-bg-white">
                     <svg
@@ -327,7 +327,7 @@
                   </span>
                                 <div class="ud-absolute ud--top-full ud-left-1/2 ud-z-50 ud--translate-x-1/2 ud-whitespace-nowrap ud-rounded-full ud-bg-[#2D2C4A] ud-px-5 ud-py-2 ud-text-white ud-opacity-0 group-hover:ud-opacity-100">
                                     <span class="ud-absolute ud--bottom-1 ud-left-1/2 ud-h-3 ud-w-3 ud--translate-x-1/2 ud-rotate-45 ud-bg-[#2D2C4A]"></span>
-                                    <span>Bitcoin (BTC)</span>
+                                    <span>ETHEREUM (ETH)</span>
                                 </div>
                             </div>
                             <div class="ud-group ud-relative ud-mt-4 ud-px-1 sm:ud-px-2">
@@ -360,10 +360,10 @@
                   </span>
                                 <div class="ud-absolute ud--top-full ud-left-1/2 ud-z-50 ud--translate-x-1/2 ud-whitespace-nowrap ud-rounded-full ud-bg-[#2D2C4A] ud-px-5 ud-py-2 ud-text-white ud-opacity-0 group-hover:ud-opacity-100">
                                     <span class="ud-absolute ud--bottom-1 ud-left-1/2 ud-h-3 ud-w-3 ud--translate-x-1/2 ud-rotate-45 ud-bg-[#2D2C4A]"></span>
-                                    <span>Bitcoin (BTC)</span>
+                                    <span>POLYGON MATIC (MATIC)</span>
                                 </div>
                             </div>
-                            <div class="ud-group ud-relative ud-mt-4 ud-px-1 sm:ud-px-2">
+                            <!-- <div class="ud-group ud-relative ud-mt-4 ud-px-1 sm:ud-px-2">
                                 <span class="ud-mt-2 ud-flex ud-h-10 ud-w-10 ud-items-center ud-justify-center ud-rounded-full ud-bg-white">
                     <svg
                       width="28"
@@ -383,7 +383,7 @@
                                     <span class="ud-absolute ud--bottom-1 ud-left-1/2 ud-h-3 ud-w-3 ud--translate-x-1/2 ud-rotate-45 ud-bg-[#2D2C4A]"></span>
                                     <span>Bitcoin (BTC)</span>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
 
                         <a href="javascript:void(0)" class="ud-rounded-full ud-bg-primary ud-py-3 ud-px-8 ud-text-base ud-font-semibold ud-text-white hover:ud-bg-opacity-90 dark:hover:bg-opacity-90">
@@ -622,38 +622,38 @@
                     <div class="ud-w-full ud-px-4 lg:ud-w-1/2">
                         <div class="wow fadeInUp ud-mb-9" data-wow-delay="0s">
                             <span class="ud-mb-3 ud-text-lg ud-font-bold ud-uppercase ud-text-primary sm:ud-text-xl">
-                  TOKEN
+                  Paytree Priorities
                 </span>
                             <h2 class="ud-mb-3 ud-text-3xl ud-font-bold ud-leading-tight ud-text-black dark:ud-text-white md:ud-text-[45px]">
-                                Token Sale
+                                Current WIP (upcoming)
                             </h2>
                             <p class="ud-text-lg ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum tellus at lectus pulvinar, id auctor felis iaculis. In vestibulum neque sem, at dapibus justo facilisis in.
+                                Paytree platform is currently being developed and being Prioritised on the tasks.
                             </p>
                         </div>
                         <div class="wow fadeInUp ud-space-y-4" data-wow-delay="0s">
                             <p class="ud-flex">
                                 <span class="ud-mr-4 ud-h-6 ud-w-6 ud-rounded-full ud-bg-primary"></span>
                                 <span class="ud-text-lg ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                    73% Financial Overhead
+                    73% Usability tasks 
                   </span>
                             </p>
                             <p class="ud-flex">
                                 <span class="ud-mr-4 ud-h-6 ud-w-6 ud-rounded-full ud-bg-[#2347B9]"></span>
                                 <span class="ud-text-lg ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                    55% Bonus & found
+                    55% Chain integrations
                   </span>
                             </p>
                             <p class="ud-flex">
                                 <span class="ud-mr-4 ud-h-6 ud-w-6 ud-rounded-full ud-bg-[#8BA6FF]"></span>
                                 <span class="ud-text-lg ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                    38% it infastrueture
+                    38% IT infrasturcture works
                   </span>
                             </p>
                             <p class="ud-flex">
                                 <span class="ud-mr-4 ud-h-6 ud-w-6 ud-rounded-full ud-bg-[#8696CA]"></span>
                                 <span class="ud-text-lg ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                    20.93% Gift Code Inventory
+                    20.93% User KYC & Banking partner 
                   </span>
                             </p>
                         </div>
@@ -679,8 +679,7 @@
                     The Timeline
                 </h2>
                 <p class="ud-text-lg ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed congue arcu, In et dignissim quam condimentum vel.
-                </p>
+                    Here you go to find out where are we right now </p>
             </div>
 
             <div class="ud--mx-4 ud-flex ud-justify-center">
@@ -692,11 +691,10 @@
                                 <span class="ud-absolute ud-top-1/2 ud-left-0 ud-hidden ud-h-4 ud-w-4 ud--translate-y-1/2 ud-rounded-full ud-border-4 ud-border-primary ud-bg-white dark:ud-border-body-color md:ud-left-auto md:ud--right-9 md:ud-block lg:ud--right-11"></span>
                                 <span class="ud-absolute ud--right-1 ud-top-1/2 ud-hidden ud-h-3 ud-w-3 ud--translate-y-1/2 ud-rotate-45 ud-bg-light-bg dark:ud-bg-dark md:ud-block"></span>
                                 <h3 class="ud-mb-3 ud-text-xl ud-font-bold ud-text-black dark:ud-text-white">
-                                    Feb 25,2020
+                                    Aug 1,2022
                                 </h3>
                                 <p class="ud-mb-5 ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed congue arcu, In et dignissim quam condimentum vel
-                                </p>
+                                    Started building the product with the aim to build a payroll management software for Crypto space. </p>
 
                                 <a href="" class="ud-inline-flex ud-items-center ud-justify-center ud-rounded-full ud-bg-white ud-p-2 ud-pr-3">
                                     <span class="ud-pr-1">
@@ -718,12 +716,12 @@
                       </svg>
                     </span>
                                     <span class="ud-pr-2 ud-text-xs ud-font-semibold ud-text-body-color-2 dark:ud-text-body-color">
-                      Bitcoin
+                      Bitcoin added
                     </span>
 
-                                    <span class="ud-text-[8px] ud-font-semibold ud-text-body-color-2 dark:ud-text-[#959595]">
+                                    <!-- <span class="ud-text-[8px] ud-font-semibold ud-text-body-color-2 dark:ud-text-[#959595]">
                       4.5%
-                    </span>
+                    </span> -->
                                     <span>
                       <svg
                         width="10"
@@ -748,10 +746,10 @@
                                 <span class="ud-absolute ud-top-1/2 ud-left-0 ud-hidden ud-h-4 ud-w-4 ud--translate-y-1/2 ud-rounded-full ud-border-4 ud-border-primary ud-bg-white dark:ud-border-body-color md:ud-right-auto md:ud--left-9 md:ud-block lg:ud--left-11"></span>
                                 <span class="ud-absolute ud--left-1 ud-top-1/2 ud-hidden ud-h-3 ud-w-3 ud--translate-y-1/2 ud-rotate-45 ud-bg-light-bg dark:ud-bg-dark md:ud-block"></span>
                                 <h3 class="ud-mb-3 ud-text-xl ud-font-bold ud-text-black dark:ud-text-white">
-                                    Jan 14,2021
+                                    Aug 12, 2022
                                 </h3>
                                 <p class="ud-mb-5 ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed congue arcu, In et dignissim quam condimentum vel
+                                    Adding functionality to send salaries/stocks through vesting periods.
                                 </p>
 
                                 <a href="" class="ud-inline-flex ud-items-center ud-justify-center ud-rounded-full ud-bg-white ud-p-2 ud-pr-3">
