Adding text changes 3

--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                                 <span class="ud-absolute ud-top-1/2 ud-left-0 ud-hidden ud-h-4 ud-w-4 ud--translate-y-1/2 ud-rounded-full ud-border-4 ud-border-primary ud-bg-white dark:ud-border-body-color md:ud-left-auto md:ud--right-9 md:ud-block lg:ud--right-11"></span>
                                 <span class="ud-absolute ud--right-1 ud-top-1/2 ud-hidden ud-h-3 ud-w-3 ud--translate-y-1/2 ud-rotate-45 ud-bg-light-bg dark:ud-bg-dark md:ud-block"></span>
                                 <h3 class="ud-mb-3 ud-text-xl ud-font-bold ud-text-black dark:ud-text-white">
-                                    Aug 1,2022
+                                    Aug 1, 2022
                                 </h3>
                                 <p class="ud-mb-5 ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
                                     Started building the product with the aim to build a payroll management software for Crypto space. </p>
@@ -721,7 +721,7 @@
 
                                     <!-- <span class="ud-text-[8px] ud-font-semibold ud-text-body-color-2 dark:ud-text-[#959595]">
                       4.5%
-                    </span> -->
+                    </span> 
                                     <span>
                       <svg
                         width="10"
@@ -735,7 +735,7 @@
                           fill="#60D16B"
                         />
                       </svg>
-                    </span>
+                    </span> -->
                                 </a>
                             </div>
                         </div>
@@ -749,7 +749,7 @@
                                     Aug 12, 2022
                                 </h3>
                                 <p class="ud-mb-5 ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                                    Adding functionality to send salaries/stocks through vesting periods.
+                                    Adding functionality to send salaries/stocks through Periodic cycles.
                                 </p>
 
                                 <a href="" class="ud-inline-flex ud-items-center ud-justify-center ud-rounded-full ud-bg-white ud-p-2 ud-pr-3">
@@ -804,10 +804,10 @@
                       </svg>
                     </span>
                                     <span class="ud-pr-2 ud-text-xs ud-font-semibold ud-text-body-color-2 dark:ud-text-body-color">
-                      ethereum
+                      Ethereum added
                     </span>
 
-                                    <span class="ud-text-[8px] ud-font-semibold ud-text-body-color-2 dark:ud-text-[#959595]">
+                                    <!-- <span class="ud-text-[8px] ud-font-semibold ud-text-body-color-2 dark:ud-text-[#959595]">
                       2.5%
                     </span>
                                     <span>
@@ -823,7 +823,7 @@
                           fill="#60D16B"
                         />
                       </svg>
-                    </span>
+                    </span> -->
                                 </a>
                             </div>
                         </div>
@@ -832,10 +832,10 @@
                                 <span class="ud-absolute ud-top-1/2 ud-left-0 ud-hidden ud-h-4 ud-w-4 ud--translate-y-1/2 ud-rounded-full ud-border-4 ud-border-primary ud-bg-white dark:ud-border-body-color md:ud-left-auto md:ud--right-9 md:ud-block lg:ud--right-11"></span>
                                 <span class="ud-absolute ud--right-1 ud-top-1/2 ud-hidden ud-h-3 ud-w-3 ud--translate-y-1/2 ud-rotate-45 ud-bg-light-bg dark:ud-bg-dark md:ud-block"></span>
                                 <h3 class="ud-mb-3 ud-text-xl ud-font-bold ud-text-black dark:ud-text-white">
-                                    Mar 30,2021
+                                    Aug 15, 2022
                                 </h3>
                                 <p class="ud-mb-5 ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed congue arcu, In et dignissim quam condimentum vel
+                                    Whitepaper writing is in progress. Domain registered. Talks with a couple of Banking partners.
                                 </p>
 
                                 <a href="" class="ud-inline-flex ud-items-center ud-justify-center ud-rounded-full ud-bg-white ud-p-2 ud-pr-3">
@@ -858,13 +858,13 @@
                       </svg>
                     </span>
                                     <span class="ud-pr-2 ud-text-xs ud-font-semibold ud-text-body-color-2 dark:ud-text-body-color">
-                      chainlink
+                      V1.0 release
                     </span>
 
-                                    <span class="ud-text-[8px] ud-font-semibold ud-text-body-color-2 dark:ud-text-[#959595]">
+                                    <!--    <span class="ud-text-[8px] ud-font-semibold ud-text-body-color-2 dark:ud-text-[#959595]">
                       4.5%
                     </span>
-                                    <span>
+                                     <span>
                       <svg
                         width="10"
                         height="10"
@@ -877,7 +877,7 @@
                           fill="#60D16B"
                         />
                       </svg>
-                    </span>
+                    </span> -->
                                 </a>
                             </div>
                         </div>
@@ -888,10 +888,10 @@
                                 <span class="ud-absolute ud-top-1/2 ud-left-0 ud-hidden ud-h-4 ud-w-4 ud--translate-y-1/2 ud-rounded-full ud-border-4 ud-border-primary ud-bg-white dark:ud-border-body-color md:ud-right-auto md:ud--left-9 md:ud-block lg:ud--left-11"></span>
                                 <span class="ud-absolute ud--left-1 ud-top-1/2 ud-hidden ud-h-3 ud-w-3 ud--translate-y-1/2 ud-rotate-45 ud-bg-light-bg dark:ud-bg-dark md:ud-block"></span>
                                 <h3 class="ud-mb-3 ud-text-xl ud-font-bold ud-text-black dark:ud-text-white">
-                                    Dec 19,2021
+                                    Aug 20, 2022
                                 </h3>
                                 <p class="ud-mb-5 ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed congue arcu, In et dignissim quam condimentum vel
+                                    Polygon support added. Deployment in Polygon network is in progress. Launching the operations soon.
                                 </p>
 
                                 <a href="" class="ud-inline-flex ud-items-center ud-justify-center ud-rounded-full ud-bg-white ud-p-2 ud-pr-3">
@@ -914,10 +914,10 @@
                       </svg>
                     </span>
                                     <span class="ud-pr-2 ud-text-xs ud-font-semibold ud-text-body-color-2 dark:ud-text-body-color">
-                      polygon
+                      Polygon added
                     </span>
 
-                                    <span class="ud-text-[8px] ud-font-semibold ud-text-body-color-2 dark:ud-text-[#959595]">
+                                    <!-- <span class="ud-text-[8px] ud-font-semibold ud-text-body-color-2 dark:ud-text-[#959595]">
                       2.5%
                     </span>
                                     <span>
@@ -933,7 +933,7 @@
                           fill="#60D16B"
                         />
                       </svg>
-                    </span>
+                    </span> -->
                                 </a>
                             </div>
                         </div>
