Adding UI changes on the landing page

--- a/index.html
+++ b/index.html
@@ -1904,7 +1904,7 @@
                             <img src="images/logo/logo.png" alt="logo" class="dark:ud-hidden" />
                         </a>
                         <p class="ud-mb-10 ud-text-base ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae quam nec ante fringilla vel at erat convallis elit.
+                            Get paid in crypto. That is the only way for mass adoption of Web3. PayTree provides an eat your own dog food platform for all the Crypto maxis by providing a seamless payroll management platform. A Crypto bank that you can trust.
                         </p>
                         <div class="ud-flex ud-items-center ud-space-x-3">
                             <a href="javascript:void(0)" class="ud-flex ud-h-10 ud-w-10 ud-items-center ud-justify-center ud-rounded-full ud-bg-light-bg ud-text-body-color-2 hover:ud-bg-primary hover:ud-text-white dark:ud-bg-dark dark:ud-text-white dark:hover:ud-bg-primary" name="social-link"
@@ -1997,7 +1997,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- 
                 <div class="ud-w-full ud-px-4 md:ud-w-1/2 lg:ud-w-1/2 xl:ud-w-4/12">
                     <div class="wow fadeInUp ud-mb-14 xl:ud-mb-20" data-wow-delay="0s">
                         <h2 class="ud-mb-5 ud-text-2xl ud-font-bold ud-text-black dark:ud-text-white">
@@ -2060,15 +2060,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="wow fadeInUp ud-border-t ud-border-[#F3F4F4] ud-py-7 ud-text-center dark:ud-border-[#2D2C4A]" data-wow-delay="0s">
                 <p class="ud-text-base ud-font-medium ud-leading-loose ud-text-body-color-2 dark:ud-text-body-color">
-                    © Paytree.club - all Rights Reserved, Crafted by
-                    <a href="https://paytree.club" rel="noopenner nofollow" target="_blank" class="hover:ud-text-primary">
-              UIdeck
-            </a>
+                    © Paytree.club - Made in India
+
                 </p>
             </div>
         </div>
