--- a/app/index.html
+++ b/app/index.html
@@ -538,7 +538,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-12 footer-copyright text-center">
-                <p class="mb-0">Made duirng the DAO Global Hackathon</p>
+                <p class="mb-0">Made by Paytree.club for BUIDL IT Hackathon</p>
               </div>
             </div>
           </div>
