--- a/app/index.html
+++ b/app/index.html
@@ -145,7 +145,9 @@
                   </li>
                   <li class="sidebar-list"><a class="sidebar-link sidebar-title navDeposit" href="#"><i data-feather="dollar-sign"></i><span class="">Add Funds</span></a>
                   </li>
-                  <li class="sidebar-list"><a class="sidebar-link sidebar-title team" href="#"><i data-feather="users"></i><span class="">Team</span></a>
+                  <li class="sidebar-list"><a class="sidebar-link sidebar-title team" href="#"><i data-feather="user-plus"></i><span class="">Add Team</span></a>
+                  </li>
+                  <li class="sidebar-list"><a class="sidebar-link sidebar-title teamList" href="#"><i data-feather="users"></i><span class="">Team List</span></a>
                   </li>
 
                 </ul>
@@ -427,6 +429,49 @@
                       </div>
                     </div>
                   </div>
+                  <div id="teamList" class="col-xl-8 xl-100 box-col-12 section" style="display: none;">
+                    <div class="card">
+                      <div class="card-header">
+                        <h5 class="mb-3">Team members List</h5>
+                      </div>
+                      <div class="card-body">
+                        <div class="table-responsive">
+                          <button class="btn btn-primary addTeam" id="navTeamCard" type="button" title="">Add Team</button>
+                          <table class="display w-100" id="all-flows"></table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- <div id="teamList" class="col-md-6 mx-auto section" style="display: none;">
+                    <div class="card">
+                      <div class="card-header">
+                        <h5>Team Member List</h5><span></span>
+                      </div>
+                      <div class="card-body">
+
+                        <div class="tab tab-deposit">
+                            <div class="mb-3">
+                              <p class="lead">Add team member to manage vesting flows</p>
+                              <label for="teamAddress">Address:</label>
+                              <input class="form-control" id="teamAddress" type="text" placeholder="0x..." data-bs-original-title="" title="">
+                            </div>
+                            <div class="mb-3">
+                              <label class="form-label" for="teamRole">Role</label>
+                              <select class="form-select" id="teamRole">
+                                <option value="MANAGER">Manager</option>
+                                <option value="GRANTOR">Grantor</option>
+                                <option value="CLOSER">Closer</option>
+                                <option value="LAUNCHER">Launcher</option>
+                              </select>
+                            </div>
+                            <div class="text-center" style="margin-bottom: 20px;">
+                              <button class="btn btn-primary addTeam" id="addTeam" data-form="card" type="button" title="">Add Team Member</button>
+                            </div>
+                        </div>
+
+                      </div>
+                    </div>
+                  </div> -->
 
               <div id="stats" class="col-xl-8 xl-100 dashboard-sec box-col-12 stats section">
                 <div class="card earning-card">
