--- a/app/index.html
+++ b/app/index.html
@@ -437,7 +437,7 @@
                       <div class="card-body">
                         <div class="table-responsive">
                           <button class="btn btn-primary addTeam" id="navTeamCard" type="button" title="">Add Team</button>
-                          <table class="display w-100" id="all-flows"></table>
+                          <table class="display w-100" id="all-team"></table>
                         </div>
                       </div>
                     </div>
