Adding UI changes on the landing page

--- a/index.html
+++ b/index.html
@@ -1755,7 +1755,7 @@
                                     Our Location
                                 </h3>
                                 <p class="ud-text-base ud-font-medium ud-leading-loose ud-text-body-color-2 dark:ud-text-body-color">
-                                    401 Broadway, 24th Floor, Orchard Cloud View, London
+                                    Coming Soon!
                                 </p>
                             </div>
                         </div>
