disconnect nav added

--- a/app/index.html
+++ b/app/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <ul class="profile-dropdown onhover-show-div">
                   <li><a href="#" class="team"><i data-feather="users"></i><span>Team </span></a></li>
-                  <li><a href="#" class="disconnect"><i data-feather="log-out"> </i><span>Disconnect</span></a></li>
+                  <li><a href="https://www.paytree.club/" class="disconnect"><i data-feather="log-out"> </i><span>Disconnect</span></a></li>
                 </ul>
               </li>
             </ul>
