--- a/app/index.html
+++ b/app/index.html
@@ -139,9 +139,9 @@
                   <li class="sidebar-list">
                     <a class="sidebar-link sidebar-title navStats" href="#"><i data-feather="home"></i><span class="">Dashboard</span></a>
                   </li>
-                  <li class="sidebar-list"><a class="sidebar-link sidebar-title navFlows" href="#"><i data-feather="wind"></i><span class="">Flows</span></a>
+                  <li class="sidebar-list"><a class="sidebar-link sidebar-title navFlows" href="#"><i data-feather="fast-forward"></i><span class="">Streams</span></a>
                   </li>
-                  <li class="sidebar-list"><a class="sidebar-link sidebar-title addFlow" href="#"><i data-feather="plus"></i><span class="">Add Flow</span></a>
+                  <li class="sidebar-list"><a class="sidebar-link sidebar-title addFlow" href="#"><i data-feather="plus"></i><span class="">Add Stream</span></a>
                   </li>
                   <li class="sidebar-list"><a class="sidebar-link sidebar-title navDeposit" href="#"><i data-feather="dollar-sign"></i><span class="">Add Funds</span></a>
                   </li>
@@ -213,7 +213,7 @@
                             <div class="mb-3">
                               <p class="lead">Desposit tokens to vesting contract</p>
                               <label for="amount">Amount:</label>
-                              <input class="form-control" id="wizardAmount" type="text" placeholder="0" data-bs-original-title="" title="">
+                              <input class="form-control" id="wizardAmount" type="text" placeholder="ETH1000" data-bs-original-title="" title="">
                             </div>
                             <div class="text-center" style="margin-bottom: 20px;">
                               <button class="btn btn-primary deposit" id="despositUnderlying" data-form="wizard" type="button" title="">Approve</button>
@@ -266,13 +266,13 @@
                                   <label class="col-form-label m-r-10">Unstoppable:</label>
                                   <div class="media-body">
                                     <label class="switch">
-                                        <input id="wizardPermanent" type="checkbox" data-bs-trigger="hover" data-container="body" data-bs-toggle="popover" data-bs-placement="bottom" title="Unstoppable Flows" data-offset="-20px -20px" data-bs-content="If enabled, you won't be able to stop this flow before the end date"><span class="switch-state"></span>
+                                        <input id="wizardPermanent" type="checkbox" data-bs-trigger="hover" data-container="body" data-bs-toggle="popover" data-bs-placement="bottom" title="Unstoppable Streams" data-offset="-20px -20px" data-bs-content="If enabled, you won't be able to stop this flow before the end date"><span class="switch-state"></span>
                                     </label>
                                   </div>
                                 </div>
                             </div>
                             <div class="text-center" style="margin-bottom: 20px;">
-                              <button class="btn btn-primary" id="addFlow" data-form="wizard" type="button" title="">Add Flow</button>
+                              <button class="btn btn-primary" id="addFlow" data-form="wizard" type="button" title="">Add Stream</button>
                             </div>
                         </div>
                         <div>
@@ -298,11 +298,11 @@
               <div id="flowsTable" class="col-xl-8 xl-100 box-col-12 section" style="display: none;">
                   <div class="card">
                     <div class="card-header">
-                      <h5 class="mb-3">Vesting Flows</h5>
+                      <h5 class="mb-3">Transmit Streams</h5>
                     </div>
                     <div class="card-body">
                       <div class="table-responsive">
-                        <button class="btn btn-primary addFlow" id="navAddFlow" type="button" title="">Add Flow</button>
+                        <button class="btn btn-primary addFlow" id="navAddFlow" type="button" title="">Add Stream</button>
                         <table class="display w-100" id="all-flows"></table>
                       </div>
                     </div>
@@ -313,13 +313,13 @@
                 <div id="addFlowSection" class="col-md-6 mx-auto section" style="display: none;">
                   <div class="card">
                     <div class="card-header">
-                      <h5>Add a Vesting Flow</h5><span></span>
+                      <h5>Add a Stream</h5><span></span>
                     </div>
                     <div class="card-body">
 
                         <div class="tab tab-flow">
                             <div class="mb-3">
-                              <p class="lead">Register a vesting flow to an address</p>
+                              <p class="lead">Register a stream to an address</p>
                             </div>
                             <div class="mb-3">
                               <label for="sectionAddress">Address:</label>
@@ -363,13 +363,13 @@
                                   <label class="col-form-label m-r-10">Unstoppable:</label>
                                   <div class="media-body">
                                     <label class="switch">
-                                        <input id="sectionPermanent" type="checkbox" data-bs-trigger="hover" data-container="body" data-bs-toggle="popover" data-bs-placement="bottom" title="Unstoppable Flows" data-offset="-20px -20px" data-bs-content="If enabled, you won't be able to stop this flow before the end date"><span class="switch-state"></span>
+                                        <input id="sectionPermanent" type="checkbox" data-bs-trigger="hover" data-container="body" data-bs-toggle="popover" data-bs-placement="bottom" title="Unstoppable Streams" data-offset="-20px -20px" data-bs-content="If enabled, you won't be able to stop this stream before the end date"><span class="switch-state"></span>
                                     </label>
                                   </div>
                                 </div>
                             </div>
                             <div class="text-center" style="margin-bottom: 20px;">
-                              <button class="btn btn-primary" id="addFlowCard" data-form="" type="button" title="">Add Flow</button>
+                              <button class="btn btn-primary" id="addFlowCard" data-form="" type="button" title="">Add Stream</button>
                             </div>
                         </div>
                         <!-- Container-fluid Ends-->
@@ -388,7 +388,7 @@
                             <div class="mb-3">
                               <p class="lead">Desposit tokens to vesting contract</p>
                               <label for="sectionAmount">Amount:</label>
-                              <input class="form-control" id="sectionAmount" type="text" placeholder="0" data-bs-original-title="" title="">
+                              <input class="form-control" id="sectionAmount" type="text" placeholder="ETH1000" data-bs-original-title="" title="">
                             </div>
                             <div class="text-center" style="margin-bottom: 20px;">
                               <button class="btn btn-primary deposit" id="" data-form="card" type="button" title="">Approve</button>
@@ -433,11 +433,35 @@
                     <div class="card">
                       <div class="card-header">
                         <h5 class="mb-3">Team members List</h5>
+                        <!-- <button class="btn btn-primary addTeam" id="navTeamCard" type="button" title="">Add Team</button> -->
                       </div>
                       <div class="card-body">
                         <div class="table-responsive">
-                          <button class="btn btn-primary addTeam" id="navTeamCard" type="button" title="">Add Team</button>
-                          <table class="display w-100" id="all-team"></table>
+                          <table class="table">
+                            <thead>
+                              <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Address</th>
+                                <th scope="col">Role</th>
+                                <th scope="col">Date Added</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <th scope="row">1</th>
+                                <td>0x405Aef8f3f48EBe915D00C3583Bc23537e5A6b94</td>
+                                <td>Manager</td>
+                                <td>August 18, 2022</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">2</th>
+                                <td>0x4D3e9A008CfA2eBa34d5D32F86141678427E7CF4</td>
+                                <td>Employee</td>
+                                <td>August 19, 2022</td>
+                              </tr>
+                            </tbody>
+                          </table>
+
                         </div>
                       </div>
                     </div>
@@ -493,7 +517,7 @@
                               <div class="inner-top-right">
                                 <ul class="d-flex list-unstyled justify-content-end">
                                   <li>Balance</li>
-                                  <li>Flow</li>
+                                  <li>Stream</li>
                                 </ul>
                               </div>
                             </div>
@@ -514,6 +538,7 @@
                               <div class="media-left"><i class="icofont icofont-cur-dollar"></i></div>
                               <div class="media-body">
                                 <h6>Token Balance</h6>
+                                <p><span id="flowRate"></span></span>ETH100</p>
                                 <p id="vestorBal"></p>
                               </div>
                             </div>
@@ -522,8 +547,8 @@
                             <div class="media p-0">
                               <div class="media-left bg-secondary"><i class="icofont icofont-wind"></i></div>
                               <div class="media-body">
-                                <h6>Current Flow Rate</h6>
-                                <p><span id="flowRate"></span></span> per day</p>
+                                <h6>Current Stream Rate</h6>
+                                <p><span id="flowRate"></span></span>ETH3.3333333 per day</p>
                               </div>
                             </div>
                           </div>
@@ -532,6 +557,7 @@
                               <div class="media-left"><i class="icofont icofont-calendar"></i></div>
                               <div class="media-body">
                                 <h6>Days of Funding</h6>
+                                <p><span id="flowRate"></span></span>Aug 21, 2022 ~ Sep 21, 2022</p>
                                 <p class="daysLeft"></p>
                               </div>
                             </div>
