--- a/app/index.html
+++ b/app/index.html
@@ -538,7 +538,8 @@
                               <div class="media-left"><i class="icofont icofont-cur-dollar"></i></div>
                               <div class="media-body">
                                 <h6>Token Balance</h6>
-                                <p><span id="flowRate"></span></span>ETH100</p>
+                                <!-- <p><span id="flowRateEth"></span></span>1</p> -->
+                                <span>ETH</span> <p id="txt">1000</p>
                                 <p id="vestorBal"></p>
                               </div>
                             </div>
@@ -548,7 +549,8 @@
                               <div class="media-left bg-secondary"><i class="icofont icofont-wind"></i></div>
                               <div class="media-body">
                                 <h6>Current Stream Rate</h6>
-                                <p><span id="flowRate"></span></span>ETH3.3333333 per day</p>
+                                <span>ETH</span>
+                                <p><span id="flowRate"></span></span>3.3333333 per day</p>
                               </div>
                             </div>
                           </div>
