--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-        Crypto Tailwind - Crypto and ICO Web Template for Tailwind CSS
+        Paytree.club
     </title>
 
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/stream.svg" type="image/x-icon" />
 
     <!-- ===== CSS Files ===== -->
     <link rel="stylesheet" href="css/glightbox.min.css" />
@@ -240,7 +240,7 @@
                                     <span class="ud-absolute ud--bottom-1 ud-left-1/2 ud-h-3 ud-w-3 ud--translate-x-1/2 ud-rotate-45 ud-bg-[#2D2C4A]"></span>
                                     <span>Bitcoin (BTC)</span>
                                 </div>
-                            </div> 
+                            </div>
                             <div class="ud-group ud-relative ud-mt-4 ud-px-1 sm:ud-px-2">
                                 <span class="ud-mt-2 ud-flex ud-h-10 ud-w-10 ud-items-center ud-justify-center ud-rounded-full ud-bg-white">
                     <svg
@@ -635,7 +635,7 @@
                             <p class="ud-flex">
                                 <span class="ud-mr-4 ud-h-6 ud-w-6 ud-rounded-full ud-bg-primary"></span>
                                 <span class="ud-text-lg ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                    73% Usability tasks 
+                    73% Usability tasks
                   </span>
                             </p>
                             <p class="ud-flex">
@@ -653,7 +653,7 @@
                             <p class="ud-flex">
                                 <span class="ud-mr-4 ud-h-6 ud-w-6 ud-rounded-full ud-bg-[#8696CA]"></span>
                                 <span class="ud-text-lg ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                    20.93% User KYC & Banking partner 
+                    20.93% User KYC & Banking partner
                   </span>
                             </p>
                         </div>
@@ -721,7 +721,7 @@
 
                                     <!-- <span class="ud-text-[8px] ud-font-semibold ud-text-body-color-2 dark:ud-text-[#959595]">
                       4.5%
-                    </span> 
+                    </span>
                                     <span>
                       <svg
                         width="10"
@@ -1153,7 +1153,7 @@
     </section>
     <!-- ===== Team Section end ===== -->
 
-    <!-- ===== Testimonial Section start ===== 
+    <!-- ===== Testimonial Section start =====
     <section id="testimonial" class="ud-bg-light-bg ud-pt-[120px] ud-pb-20 dark:ud-bg-[#14102C]">
         <div class="ud-container">
             <div class="wow fadeInUp ud-mx-auto ud-mb-16 ud-max-w-[590px] ud-text-center md:ud-mb-20" data-wow-delay="0s">
@@ -1569,7 +1569,7 @@
     </section>
     <!-- ===== Faq Section end ===== -->
 
-    <!-- ===== Blog Section start ===== 
+    <!-- ===== Blog Section start =====
     <section id="blog" class="ud-pt-[120px] ud-pb-20">
         <div class="ud-container">
             <div class="wow fadeInUp ud-mx-auto ud-mb-16 ud-max-w-[590px] ud-text-center md:ud-mb-20" data-wow-delay="0s">
@@ -1841,7 +1841,7 @@
     </section>
     <!-- ===== Contact Section end ===== -->
 
-    <!-- ===== Newsletter Section start ===== 
+    <!-- ===== Newsletter Section start =====
     <section id="newsletter" class="ud-relative ud-z-10">
         <div class="ud-absolute ud-top-0 ud-left-0 ud--z-10 ud-h-[120px] ud-w-full ud-bg-light-bg dark:ud-bg-[#14102C]"></div>
         <div class="ud-container">
@@ -1997,7 +1997,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- 
+                <!--
                 <div class="ud-w-full ud-px-4 md:ud-w-1/2 lg:ud-w-1/2 xl:ud-w-4/12">
                     <div class="wow fadeInUp ud-mb-14 xl:ud-mb-20" data-wow-delay="0s">
                         <h2 class="ud-mb-5 ud-text-2xl ud-font-bold ud-text-black dark:ud-text-white">
