--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
                                 Hari Venad
                             </h3>
                             <p class="ud-mb-3 ud-text-sm ud-font-medium ud-text-body-color-2 dark:ud-text-body-color">
-                                Frontend Developer
+                              Blockchain & Frontend Developer
                             </p>
 
                             <div class="ud-mb-4 ud-flex ud-items-center ud-justify-center ud-space-x-4">
